--- a/introstyle.css
+++ b/introstyle.css
@@ -18,7 +18,7 @@ p {
 	color: rgb(150,150,150);
 	width: 1280px;
 	margin: auto;
-	margin-top: 500px;
-	border-bottom: solid 2px rgb(150,150,150);
+	margin-top: 10px;
+	border-top: solid 2px rgb(150,150,150);
 	
 }
