--- a/introstyle.css
+++ b/introstyle.css
@@ -18,7 +18,8 @@ p {
 	color: rgb(150,150,150);
 	width: 1280px;
 	margin: auto;
-	margin-top: 10px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 	border-top: solid 2px rgb(150,150,150);
 	padding: 5px 0px;
 }
