--- a/introstyle.css
+++ b/introstyle.css
@@ -18,6 +18,6 @@ p {
 	color: rgb(150,150,150);
 	width: 1280px;
 	margin: auto;
-	border-top: solid 2px rgb(150,150,150);
+	border-bottom: solid 2px rgb(150,150,150);
 	padding: 10px 0px;
 }
