--- a/introstyle.css
+++ b/introstyle.css
@@ -4,7 +4,7 @@ body {
 
 h1 {
 	text-align: center;
-	font-family: oxygen, sans-serif;
+	font-family: asap, sans-serif;
 	color: rgb(150,150,150);
 	width: 500px;
 	margin: auto;
@@ -14,7 +14,7 @@ h1 {
 
 p {
 	text-align: center;
-	font-family: oxygen, sans-serif;
+	font-family: asap, sans-serif;
 	color: rgb(150,150,150);
 	width: 1280px;
 	margin: auto;
