--- a/introstyle.css
+++ b/introstyle.css
@@ -13,7 +13,7 @@ h1 {
 }
 
 p {
-	text-align: left;
+	text-align: center;
 	font-family: asap, sans-serif;
 	color: rgb(150,150,150);
 	line-height: 1.2;
