--- a/introstyle.css
+++ b/introstyle.css
@@ -24,7 +24,7 @@ p {
 }
 
 a:link, a:visited, a:hover {
-	width: 1280px;
+	max-width: 350px;
 	margin: auto;
 	font-family: asap, sans-serif;
 	background-color: rgb(150,150,150);
