--- a/introstyle.css
+++ b/introstyle.css
@@ -33,7 +33,7 @@ a:link, a:visited, a:hover {
 	padding: 10px 25px;
 	text-align: center;
 	text-decoration: none;
-	display: inline-block;
+	display: block;
 }
 
 a:active {
