--- a/introstyle.css
+++ b/introstyle.css
@@ -1,5 +1,8 @@
 body {
 		background-color: black;
+		background-image: url("tevcactus.png");
+		background-position: right bottom;
+		background-repeat: no-repeat;
 }
 
 h1 {
