--- a/introstyle.css
+++ b/introstyle.css
@@ -1,10 +1,8 @@
 body {
 		background-color: black;
-		background-image: url("tevcactus.png");
-		background-position: right bottom;
-		background-repeat: no-repeat;
 }
 
+/*Header 1 Formatting*/
 h1 {
 	text-align: center;
 	font-family: asap, sans-serif;
@@ -15,6 +13,7 @@ h1 {
 	margin-bottom: 20px;
 }
 
+/*Normal Paragraph Formatting*/
 p {
 	text-align: center;
 	font-family: asap, sans-serif;
@@ -26,6 +25,7 @@ p {
 	padding: 10px 0px;
 }
 
+/* Link Button Design */
 a:link, a:visited, a:hover {
 	max-width: 100px;
 	margin: auto;
@@ -38,7 +38,6 @@ a:link, a:visited, a:hover {
 	text-decoration: none;
 	display: block;
 }
-
 a:active {
 	background-color: black;
 	color: rgb(150,150,150);
