--- a/introstyle.css
+++ b/introstyle.css
@@ -46,8 +46,8 @@ a:active {
 /* Tri-Box Links */
 .grid-container {
 	display: grid;
-	grid-template-columns: auto auto auto;
-	grid-gap: 20px;
+	grid-template-columns: 100px 100px 100px;
+	grid-gap: 10px;
 	background-color; black;
 	padding: 20px;
 }
