--- a/introstyle.css
+++ b/introstyle.css
@@ -48,7 +48,7 @@ a:active {
 	display: grid;
 	grid-template-columns: 100px 100px 100px;
 	grid-gap: 10px;
-	margin: auto
+	align-content: center;
 	background-color; black;
 	padding: 20px;
 }
