--- a/introstyle.css
+++ b/introstyle.css
@@ -46,6 +46,7 @@ a:active {
 /* Tri-Box Links */
 .grid-container {
 	display: grid;
+	width: 950px;
 	margin: auto;
 	grid-template-columns: 100px 100px 100px;
 	grid-gap: 10px;
@@ -55,7 +56,6 @@ a:active {
 }
 .grid-container > div {   /*Specifies properties of the individual grid objects*/
 	background-color: rgb(150,150,150);
-	margin: auto;
 	text-align: center;
 	font-family: asap, sans-serif;
 }
