--- a/introstyle.css
+++ b/introstyle.css
@@ -52,7 +52,7 @@ a:active {
 	grid-gap: 10px;
 	align-content: center;
 	background-color; black;
-	padding: 20px;
+	padding: 20px 0px;
 }
 .grid-container > div {   /*Specifies properties of the individual grid objects*/
 	background-color: rgb(150,150,150);
