--- a/introstyle.css
+++ b/introstyle.css
@@ -48,7 +48,7 @@ a:active {
 	display: grid;
 	width: 950px;
 	margin: auto;
-	grid-template-columns: 316.66px 316.66px 316.66px;
+	grid-template-columns: 100px 100px 100px;
 	grid-gap: 150px;
 	align-content: center;
 	background-color; black;
@@ -56,6 +56,7 @@ a:active {
 }
 .grid-container > div {   /*Specifies properties of the individual grid objects*/
 	background-color: rgb(150,150,150);
+	margin: auto;
 	text-align: center;
 	font-family: asap, sans-serif;
 }
