--- a/introstyle.css
+++ b/introstyle.css
@@ -26,7 +26,7 @@ p {
 }
 
 /* Link Button Design */
-a:link, a:visited, a:hover {
+a:link, a:visited, a:hover, a:active {
 	max-width: 100px;
 	margin: auto;
 	margin-top: 10px;
@@ -37,10 +37,6 @@ a:link, a:visited, a:hover {
 	text-align: center;
 	text-decoration: none;
 	display: block;
-}
-a:active {
-	background-color: black;
-	color: rgb(150,150,150);
 }
 
 div {
