--- a/introstyle.css
+++ b/introstyle.css
@@ -65,3 +65,21 @@ div {
 	text-align: center;
 	font-family: asap, sans-serif;
 }
+
+/* Nav Bar */
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
+}
+li {
+	float: left;
+}
+div a {
+	display: block;
+	padding: 20px 25px;
+	color: black;
+	background-color: rgb(150,150,150);
+	text-decoration: none;
+}
