--- a/introstyle.css
+++ b/introstyle.css
@@ -75,6 +75,10 @@ ul {
 }
 li {
 	float: left;
+	border-right: 1px solic rgb(150,150,150);
+}
+li:last-child {
+	border-right: none;
 }
 div a {
 	display: block;
