--- a/introstyle.css
+++ b/introstyle.css
@@ -103,10 +103,10 @@ div a:hover {
 .header {
 	background-color: rgb(150,150,150);
 	text-align: center;
-	padding: 10px
+	padding: 10px;
+	width: 950px;
 }
 h1.header {
 	font-family: asap, sans-serif;
-	font-size: 35px;
-	font-style: black;
+	font: 35px black;
 }
