--- a/introstyle.css
+++ b/introstyle.css
@@ -76,10 +76,11 @@ ul {
 }
 li {
 	float: left;
-	border-right: 1px solid black
+	border-right: 1px solid black;
+	margin:auto;
 }
 li:first-child {
-	border-left: 10px solid black
+	border-left: 10px solid black;
 }
 li:last-child {
 	border-right: none;
@@ -108,6 +109,6 @@ div a:hover {
 }
 h1.header {
 	font-family: asap, sans-serif;
-	font-size: 35px;
+	font-size: 45px;
 	color: black;
 }
