--- a/introstyle.css
+++ b/introstyle.css
@@ -69,7 +69,7 @@ div {
 ul {
 	list-style-type: none;
 	width: 950;
-	margin: auto;
+	align-content: center;
 	padding: 0;
 	overflow: hidden;
 	border-bottom: none;
