--- a/introstyle.css
+++ b/introstyle.css
@@ -68,7 +68,7 @@ div {
 /* Nav Bar */
 ul {
 	list-style-type: none;
-	width: 950;
+	width: 950px;
 	padding: 0;
 	overflow: hidden;
 	border-bottom: none;
