--- a/introstyle.css
+++ b/introstyle.css
@@ -117,9 +117,9 @@ h1.header {
 footer {
 	background-color: rgb(150,150,150);
 	text-align: center;
-	width: 950px;
+	width: 100%;
 	padding: 10px;
 	color: black;
-	font-size: 10px;
+	font-size: 12px;
 	font-family: asap, sans-serif;
 }
