--- a/introstyle.css
+++ b/introstyle.css
@@ -118,7 +118,7 @@ footer {
 	background-color: rgb(150,150,150);
 	text-align: center;
 	width: 100%;
-	padding: 10px;
+	padding: 10px 0px;
 	color: black;
 	font-size: 12px;
 	font-family: asap, sans-serif;
