--- a/introstyle.css
+++ b/introstyle.css
@@ -121,5 +121,7 @@ footer {
 	padding: 10px 0px;
 	color: black;
 	font-size: 12px;
+	position: fixed;
+	bottom: 0px;
 	font-family: asap, sans-serif;
 }
