--- a/introstyle.css
+++ b/introstyle.css
@@ -112,5 +112,5 @@ footer {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: space-between;
 }
