--- a/introstyle.css
+++ b/introstyle.css
@@ -96,6 +96,7 @@ font-family: asap, sans-serif;
 	font-size: 35px;
 	font-style: italic;
 	color: rgb(150,150,150);
+	text-align: center;
 }
 /* Basic Footer */
 footer {
