--- a/introstyle.css
+++ b/introstyle.css
@@ -1,16 +1,16 @@
 body {
-		background-color: black;
+		background-color: rgb(15,0,128);
 }
 
 /*Normal Paragraph Formatting*/
 p {
 	text-align: center;
 	font-family: asap, sans-serif;
-	color: rgb(150,150,150);
+	color: rgb(100,100,100);
 	line-height: 1.2;
 	width: 950px;
 	margin: auto;
-	border-bottom: solid 2px rgb(150,150,150);
+	border-bottom: solid 2px rgb(100,100,100);
 	padding: 10px 0px;
 }
 
@@ -20,8 +20,8 @@ a:link, a:visited, a:hover, a:active {
 	margin: auto;
 	margin-top: 10px;
 	font-family: asap, sans-serif;
-	background-color: rgb(150,150,150);
-	color: black;
+	background-color: rgb(100,100,100);
+	color: rgb(15,0,128);
 	padding: 10px 25px;
 	text-align: center;
 	text-decoration: none;
@@ -31,7 +31,7 @@ a:link, a:visited, a:hover, a:active {
 div {
 	text-align: center;
 	font-family: asap, sans-serif;
-	color: rgb(150,150,150);
+	color: rgb(100,100,100);
 	line-height: 1.2;
 	align-content: center;
 	padding: 10px 0px;
@@ -48,7 +48,7 @@ ul {
 }
 li {
 	float: left;
-	border-right: 1px solid black;
+	border-right: 1px solid rgb(15,0,128);
 	align-content: center;
 	margin:auto;
 }
@@ -58,31 +58,31 @@ li:last-child {
 div a:link, a:visited {
 	display: block;
 	padding: 10px 25px;
-	color: black;
-	background-color: rgb(150,150,150);
+	color: rgb(15,0,128);
+	background-color: rgb(100,100,100);
 	text-decoration: none;
 }
 div a:hover {
 	display: block;
 	padding: 10px 25px;
-	color: black;
+	color: rgb(15,0,128);
 	background-color: rgb(125,125,125);
 	text-decoration: none;
 }
 
 /* Basic Header */
 .header {
-	background-color: black;
+	background-color: rgb(15,0,128);
 	text-align: center;
 	width: 950px;
 	font-family: asap, sans-serif;
-	color: rgb(150,150,150);
+	color: rgb(100,100,100);
 	margin: auto;
 }
 h1.header {
 	font-family: asap, sans-serif;
 	font-size: 60px;
-	color: rgb(150,150,150);
+	color: rgb(100,100,100);
 	margin-top: 30px;
 	margin-bottom: -5px;
 }
@@ -90,18 +90,18 @@ h2.header {
 font-family: asap, sans-serif;
 	font-size: 35px;
 	font-style: italic;
-	color: rgb(150,150,150);
+	color: rgb(100,100,100);
 	text-align: center;
 	margin-bottom: 20px;
 }
 /* Basic Footer */
 footer {
-	background-color: rgb(150,150,150);
+	background-color: rgb(100,100,100);
 	text-align: center;
 	width: 100%;
-	padding: 10px 0px;
-	color: black;
-	font-size: 12px;
+	padding: 15px 0px;
+	color: rgb(15,0,128);
+	font-size: 14px;
 	position: fixed;
 	bottom: 0px;
 	font-family: asap, sans-serif;
