--- a/introstyle.css
+++ b/introstyle.css
@@ -103,6 +103,7 @@ footer {
 	color: rgb(0,10,64);
 	font-size: 12px;
 	position: fixed;
+	left: 0px;
 	bottom: 0px;
 	font-family: asap, sans-serif;
 }
