--- a/introstyle.css
+++ b/introstyle.css
@@ -1,5 +1,5 @@
 body {
-		background-color: rgb(0,10,64);
+		background-image: linear-gradient(rgb(0,10,64), rgb(0,0,32);
 }
 
 /*Normal Paragraph Formatting*/
