--- a/introstyle.css
+++ b/introstyle.css
@@ -1,7 +1,8 @@
 body {
 		background-image: linear-gradient(rgb(0,10,64), rgb(0,0,32));
-		background-repeat: no-repeat;
 		background-size: cover;
+		background-repeat: no-repeat;
+		background-origin: content-box;
 }
 
 /*Normal Paragraph Formatting*/
