--- a/introstyle.css
+++ b/introstyle.css
@@ -1,6 +1,6 @@
 body {
 		background-image: linear-gradient(rgb(0,10,64), rgb(0,0,32));
-		background-size: 1920px 1080px;
+		background-size: 1920px;
 		background-repeat: repeat-x;
 }
 
