--- a/introstyle.css
+++ b/introstyle.css
@@ -1,6 +1,7 @@
 body {
 		background-image: linear-gradient(rgb(0,10,64), rgb(0,0,32));
 		background-size: cover cover;
+		background-clip: content-box;
 		background-repeat: repeat-x;
 }
 
