--- a/introstyle.css
+++ b/introstyle.css
@@ -5,7 +5,7 @@ body {
 		background-clip: content-box;
 		background-repeat: repeat-x;
 }
-@media only screen and (min-device-width:400px) {
+@media only screen and (max-width:700px) {
 	body {
 		background-image: linear-gradient(rgb(0,10,64), rgb(0,0,32));
 		background-size: 100% 1080px;
