--- a/introstyle.css
+++ b/introstyle.css
@@ -131,7 +131,9 @@ footer {
 }
 div img {
 	border-radius: 5px;
+	transition-duration: 0.5s;
+	-webkit-transition-duration: 0.5s; /* Safari */
 }
 div img:hover {
-	box-shadow: 0 10px 15px 5px white;
+	box-shadow: 0px 5px 15px 0px rgba(255,255,255,0.25);
 }
