--- a/introstyle.css
+++ b/introstyle.css
@@ -120,7 +120,7 @@ footer {
 	font-family: asap, sans-serif;
 }
 
-/* Flexbox Setup */
+/* Flexbox Hover Links Setup */
 .flexbox-h {
 	width: 1440px;
 	margin: auto;
@@ -130,10 +130,12 @@ footer {
 	justify-content: space-around;
 }
 div img {
-	border-radius: 5px;
-	transition-duration: 0.5s;
+	border-radius: 5px; /* Rounds the image corners */
+	transition-duration: 0.5s; /* Sets the timing of the hover animation */
 	-webkit-transition-duration: 0.5s; /* Safari */
+	opacity: 0.9;
 }
-div img:hover {
-	box-shadow: 0px 0px 15px 5px rgba(220,220,220,0.70);
+div img:hover { /* Makes the selected/specified items (images) in any divs do something when moused over */
+	box-shadow: 0px 0px 15px 5px rgba(220,220,220,0.70); /* Fades in a shadow */
+	opacity: 0.2;
 }
