--- a/introstyle.css
+++ b/introstyle.css
@@ -139,3 +139,17 @@ div img:hover { /* Makes the selected/specified items (images) in any divs do so
 	box-shadow: 0px 0px 15px 5px rgba(255,255,255,1.0); /* Fades in a shadow */
 	opacity: 0.3;
 }
+.overlay { /* Sets base properties for the text overlay */
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 100%;
+	width: 100%;
+	opacity: 0;
+	transition-duration: 0.5s;
+	background-color: rgba(75,75,75,0.75);
+}
+.overlay:hover { /* Sets property changes for overlay when moused over */
+	opacity: 1
