--- a/introstyle.css
+++ b/introstyle.css
@@ -139,7 +139,7 @@ div img:hover { /* Makes the selected/specified items (images) in any divs do so
 	box-shadow: 0px 0px 15px 5px rgba(255,255,255,1.0); /* Fades in a shadow */
 	opacity: 0.3;
 }
-.overlay { /* Sets base properties for the text overlay */
+div .overlay { /* Sets base properties for the text overlay */
 	position: absolute;
 	top: 0;
 	bottom: 0;
@@ -151,5 +151,15 @@ div img:hover { /* Makes the selected/specified items (images) in any divs do so
 	transition-duration: 0.5s;
 	background-color: rgba(75,75,75,0.75);
 }
-.overlay:hover { /* Sets property changes for overlay when moused over */
+div .overlay:hover { /* Sets property changes for overlay when moused over */
 	opacity: 1
+}
+.text {
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+}
