--- a/introstyle.css
+++ b/introstyle.css
@@ -139,3 +139,8 @@ div img:hover { /* Makes the selected/specified items (images) in any divs do so
 	box-shadow: 0px 0px 15px 5px rgba(255,255,255,1.0); /* Fades in a shadow */
 	opacity: 0.3;
 }
+div p {
+	opacity: 0;
+}
+div p:hover {
+	opacity: 1;
