--- a/introstyle.css
+++ b/introstyle.css
@@ -142,6 +142,7 @@ div p {
 	opacity: 0;
 	transition-duration: 0.5s;
 	text-decoration: none;
+	transform: translate(0, -225px);
 }
 div p:hover {
 	opacity: 1;
