--- a/introstyle.css
+++ b/introstyle.css
@@ -139,6 +139,9 @@ div img:hover { /* Makes the selected/specified items (images) in any divs do so
 }
 div p {
 	width: 450px;
+	height: 450px;
+	top: 50%;
+	left: 50%;
 	opacity: 0;
 	transition-duration: 0.5s;
 	text-decoration: none;
