--- a/introstyle.css
+++ b/introstyle.css
@@ -127,14 +127,14 @@ footer {
 	flex-wrap: wrap;
 	justify-content: space-around;
 }
-div img {
+img.flexbox-h {
 	border-radius: 5px; /* Rounds the image corners */
 	transition-duration: 0.5s; /* Sets the timing of the hover animation */
 	-webkit-transition-duration: 0.5s; /* Safari */
 	transition-timing-function: linear;
 	opacity: 0.9;
 }
-div img:hover { /* Makes the selected/specified items (images) in any divs do something when moused over */
+div.flexbox-h:hover {
 	box-shadow: 0px 0px 15px 5px rgba(255,255,255,1.0); /* Fades in a shadow */
 	opacity: 0.3;
 }
