--- a/introstyle.css
+++ b/introstyle.css
@@ -129,12 +129,12 @@ footer {
 }
 img.flexbox-h {
 	border-radius: 5px; /* Rounds the image corners */
-	transition-duration: 0.5s; /* Sets the timing of the hover animation */
 	-webkit-transition-duration: 0.5s; /* Safari */
 	transition-timing-function: linear;
 	opacity: 0.9;
 }
-a img:hover {
+a.img:hover {
 	box-shadow: 0px 0px 15px 5px rgba(255,255,255,1.0); /* Fades in a shadow */
+	transition-duration: 0.5s; /* Sets the timing of the hover animation */
 	opacity: 0.3;
 }
