--- a/introstyle.css
+++ b/introstyle.css
@@ -133,7 +133,7 @@ img.flexbox-h {
 	transition-timing-function: linear;
 	opacity: 0.9;
 }
-a.img:hover {
+img:hover {
 	box-shadow: 0px 0px 15px 5px rgba(255,255,255,1.0); /* Fades in a shadow */
 	transition-duration: 0.5s; /* Sets the timing of the hover animation */
 	opacity: 0.3;
