--- a/introstyle.css
+++ b/introstyle.css
@@ -135,6 +135,7 @@ img.flexbox-h {
 }
 img:hover {
 	box-shadow: 0px 0px 15px 5px rgba(255,255,255,1.0); /* Fades in a shadow */
+	transition-timing-function: linear;
 	transition-duration: 0.5s; /* Sets the timing of the hover animation */
 	opacity: 0.3;
 }
