--- a/introstyle.css
+++ b/introstyle.css
@@ -128,8 +128,8 @@ footer {
 	justify-content: space-around;
 
 }
-img .flexbox-h {
-	-webkit-transition-duration: 0.5s; /* Safari */
+img {
+	-webkit-transition-duration: 0.3s; /* Safari */
 	transition-timing-function: linear;
 	opacity: 0.9;
 	border-radius: 5px; /* Rounds the image corners */
@@ -137,6 +137,6 @@ img .flexbox-h {
 img:hover {
 	box-shadow: 0px 0px 15px 5px rgba(255,255,255,1.0); /* Fades in a shadow */
 	transition-timing-function: linear;
-	transition-duration: 0.5s; /* Sets the timing of the hover animation */
+	transition-duration: 0.3s; /* Sets the timing of the hover animation */
 	opacity: 0.3;
 }
