--- a/introstyle.css
+++ b/introstyle.css
@@ -127,10 +127,29 @@ footer {
 	flex-wrap: wrap;
 	justify-content: space-around;
 }
+.container {
+  position: relative;
+}
+.centered-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  color: white;
+  font-size: 48px;
+  width: 100%;
+  height: 100%;
+}
+div > p {
+	opacity: 0;
+}
+div > p:hover {
+	opacity: 1.0;
+}
 img {
 	-webkit-transition-duration: 0.3s; /* Safari */
 	transition-timing-function: linear;
-	opacity: 0.9;
+	opacity: 1.0;
 	border-radius: 5px; /* Rounds the image corners */
 }
 img:hover {
@@ -138,4 +157,5 @@ img:hover {
 	transition-timing-function: linear;
 	transition-duration: 0.3s; /* Sets the timing of the hover animation */
 	opacity: 0.3;
+	-webkit-transition-duration: 0.3s; /* Safari */
 }
