--- a/introstyle.css
+++ b/introstyle.css
@@ -15,14 +15,14 @@ body {
 }
 
 /*Normal Paragraph Formatting*/
-p {
+/*p {
 	text-align: center;
 	font-family: asap, sans-serif;
 	color: rgb(191,191,169);
 	line-height: 1.2;
 	width: 950px;
 	margin: auto;
-}
+} */
 
 /* Link Button Design */
 /* a:link, a:visited, a:hover, a:active {
