--- a/introstyle.css
+++ b/introstyle.css
@@ -16,10 +16,12 @@ body {
 
 /*Normal Paragraph Formatting*/
 p {
+	text-align: center;
 	font-family: asap, sans-serif;
 	color: rgb(191,191,169);
 	line-height: 1.2;
 	width: 950px;
+	margin: auto;
 }
 
 /* Link Button Design */
