--- a/introstyle.css
+++ b/introstyle.css
@@ -137,7 +137,7 @@ footer {
   position: absolute;
   color: white;
   font-size: 108px;
-  font-style: bold;
+  font-weight: bold;
   width: 100%;
   height: 100%;
 }
