--- a/simstyle.css
+++ b/simstyle.css
@@ -51,11 +51,9 @@ p {
 ul {
 	list-style-type: none;
 	width: 1920px;
-	height: auto;
 	margin: 0;
 	padding: 0;
-	overflow: visible;
-	border-bottom: none;
+	overflow: hidden;
 	font-family: asap, sans-serif;
 }
 li {
