--- a/simstyle.css
+++ b/simstyle.css
@@ -52,10 +52,9 @@ ul {
 	list-style-type: none;
 	width: 1920px;
 	position: static;
-	left: 0;
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
+	overflow: visible;
 	font-family: asap, sans-serif;
 }
 li {
