--- a/simstyle.css
+++ b/simstyle.css
@@ -96,7 +96,8 @@ h1.header {
 	text-align: left;
 	color: rgb(191,191,169);
 	margin-top: -10px;
-	margin-bottom: -5px;
+	margin-bottom: 0px;
+	border-bottom: 2px solid rgb(191,191,169);
 }
 h2.header {
 	font-family: asap, sans-serif;
