--- a/simstyle.css
+++ b/simstyle.css
@@ -85,7 +85,7 @@ div a:hover {
 .header {
 	background-color: rgba(0,10,64,0.0);
 	text-align: center;
-	width: 1440px;
+	width: 1280px;
 	font-family: asap, sans-serif;
 	color: rgb(191,191,169);
 	margin: auto;
@@ -96,7 +96,7 @@ h1.header {
 	text-align: left;
 	color: rgb(191,191,169);
 	margin-top: -10px;
-	margin-bottom: 0px;
+	margin-bottom: -5px;
 	border-bottom: 2px solid rgb(191,191,169);
 }
 h2.header {
@@ -104,6 +104,7 @@ h2.header {
 	font-size: 35px;
 	color: rgb(191,191,169);
 	text-align: left;
+	margin-top: 5px;
 	margin-bottom: 0px;
 }
 h3.header {
