--- a/simstyle.css
+++ b/simstyle.css
@@ -56,7 +56,15 @@ ul {
 	overflow: hidden;
 	font-family: asap, sans-serif;
 }
+li {
+	border-right: 1px solid rgb(0,10,64);
+	align-content: center;
+	margin:auto;
+}
 
+li:last-child {
+	margin-bottom: none;
+}
 
 div a:link, a:visited {
 	display: block;
