--- a/simstyle.css
+++ b/simstyle.css
@@ -57,7 +57,7 @@ ul {
 	font-family: asap, sans-serif;
 }
 li {
-	border-right: 1px solid rgb(0,10,64);
+	border-bottom: 1px solid rgb(0,10,64);
 	align-content: center;
 	margin:auto;
 }
