--- a/simstyle.css
+++ b/simstyle.css
@@ -24,29 +24,6 @@ p {
 	margin: auto;
 }
 
-/* Link Button Design */
-/* a:link, a:visited, a:hover, a:active {
-	max-width: 100px;
-	margin: auto;
-	margin-top: 10px;
-	font-family: asap, sans-serif;
-	background-color: rgb(191,191,169);
-	color: rgb(0,10,64);
-	padding: 10px 25px;
-	text-align: center;
-	text-decoration: none;
-	display: block;
-} */
-
-/* div {
-	text-align: center;
-	font-family: asap, sans-serif;
-	color: rgb(191,191,169);
-	line-height: 1.2;
-	align-content: center;
-	padding: 10px 0px;
-} */
-
 /* Nav Bar */
 ul {
 	list-style-type: none;
@@ -61,11 +38,9 @@ li {
 	align-content: center;
 	margin:auto;
 }
-
 li:last-child {
 	margin-bottom: none;
 }
-
 div a:link, a:visited {
 	display: block;
 	padding: 10px 25px;
@@ -80,12 +55,11 @@ div a:hover {
 	background-color: rgb(125,125,125);
 	text-decoration: none;
 }
-
 /* Basic Header */
 .header {
 	background-color: rgba(0,10,64,0.0);
 	text-align: center;
-	width: 1330px;
+	width: 100%;
 	font-family: asap, sans-serif;
 	color: rgb(191,191,169);
 	margin: auto;
@@ -120,8 +94,17 @@ a img {
 	transition-timing-function: linear;
 	opacity: 0.99999;
 	border-radius: 5px; /* Rounds the image corners */
+	transition-duration: 0.3s;
 }
-	
+a img:hover {
+	box-shadow: 0px 0px 15px 5px rgba(255,255,255,1.0);
+	transition-duration: 0.3s;
+}
+
+/* Flexbox Setup */
+.flexbox-mid {
+	width: 1330px;
+}
 /* Basic Footer */
 footer {
 	background-color: rgb(191,191,169);
