--- a/simstyle.css
+++ b/simstyle.css
@@ -59,7 +59,7 @@ div a:hover {
 .header {
 	background-color: rgba(0,10,64,0.0);
 	text-align: center;
-	width: 100%;
+	width: 1330px;
 	font-family: asap, sans-serif;
 	color: rgb(191,191,169);
 	margin: auto;
