--- a/simstyle.css
+++ b/simstyle.css
@@ -95,9 +95,10 @@ a img {
 	opacity: 0.99999;
 	border-radius: 5px; /* Rounds the image corners */
 	transition-duration: 0.3s;
+	width: 1330px;
 }
 a img:hover {
-	box-shadow: 0px 0px 15px 5px rgba(255,255,255,1.0);
+	box-shadow: 0px 0px 15px 2px rgba(255,255,255,0.5);
 	transition-duration: 0.3s;
 }
 
