--- a/simstyle.css
+++ b/simstyle.css
@@ -97,8 +97,14 @@ a img {
 	transition-duration: 0.3s;
 }
 a img:hover {
-	box-shadow: 0px 0px 15px 2px rgba(255,255,255,0.5);
+	box-shadow: 0px 0px 15px 3px rgba(255,255,255,0.7);
 	transition-duration: 0.3s;
+}
+
+.flexbox-mid {
+	display: flex;
+	width: 1330px;
+	flex-direction: row;
 }
 
 /* Basic Footer */
