--- a/simstyle.css
+++ b/simstyle.css
@@ -37,7 +37,7 @@ li {
 	border-bottom: 1px solid rgb(0,10,64);
 	align-content: center;
 	margin:auto;
-	float: left;
+	display: inline;
 }
 li:last-child {
 	border-right: none;
