--- a/simstyle.css
+++ b/simstyle.css
@@ -34,10 +34,10 @@ ul {
 	font-family: asap, sans-serif;
 }
 li {
-	border-bottom: 1px solid rgb(0,10,64);
+	border-right: 1px solid rgb(0,10,64);
 	align-content: center;
 	margin:auto;
-	display: inline;
+	float: left;
 }
 li:last-child {
 	border-right: none;
