--- a/simstyle.css
+++ b/simstyle.css
@@ -36,6 +36,7 @@ li {
 	border-right: 1px solid rgb(0,10,64);
 	align-content: center;
 	margin: auto;
+	float: left;
 }
 li:last-child {
 	border-right: none;
