--- a/simstyle.css
+++ b/simstyle.css
@@ -27,7 +27,7 @@ p {
 /* Nav Bar */
 ul {
 	list-style-type: none;
-	margin: 0;
+	margin: auto;
 	padding: 0;
 	overflow: hidden;
 	font-family: asap, sans-serif;
