--- a/simstyle.css
+++ b/simstyle.css
@@ -18,7 +18,7 @@ body {
 p {
 	text-align: left;
 	font-family: asap, sans-serif;
-	color: rgb(191,191,169);
+	background-color: rgb(191,191,169);
 	line-height: 1.2;
 	width: 1330px;
 	margin: auto;
