--- a/simstyle.css
+++ b/simstyle.css
@@ -20,7 +20,7 @@ p {
 	font-family: asap, sans-serif;
 	color: rgb(191,191,169);
 	line-height: 1.2;
-	width: auto;
+	width: 1330px;
 	overflow: hidden;
 	margin: auto;
 }
