--- a/simstyle.css
+++ b/simstyle.css
@@ -97,6 +97,7 @@ a img {
 	opacity: 0.99999;
 	border-radius: 5px; /* Rounds the image corners */
 	transition-duration: 0.3s;
+	margin-right: 25px;
 }
 a img:hover {
 	box-shadow: 0px 0px 15px 3px rgba(255,255,255,0.7);
