--- a/simstyle.css
+++ b/simstyle.css
@@ -35,15 +35,15 @@ ul {
 	background-color: rgb(0,10,64);
 }
 li {
-	border-left: 2px solid rgb(191,191,169);
+	border-right: 2px solid rgb(191,191,169);
 	border-top: 2px solid rgb(191,191,169);
 	border-bottom: 2px solid rgb(191,191,169);
 	align-content: center;
 	margin: auto;
 	float: left;
 }
-li:last-child {
-	border-left: none;
+li:first-child {
+	border-left: 2px solid rgb(191,191,169);
 }
 .links a:link, a:visited {
 	display: block;
